fix weird chromium resizing on mobile

--- a/style/index.css
+++ b/style/index.css
@@ -152,6 +152,7 @@ nav ul {
     width: 100%;
     height: 100%;
     z-index: -2;
+    contain: layout;
   }
   @media only screen and (width < 768px) {
     grid-template-columns: 1fr;
